# f1-cli-simulator

./: .gitignore  Cargo.toml  PRD.md  README.md
.github/workflows/: ci.yml
data/: race_2019_monza.json  race_2023_albert_park.json  race_2023_americas.json  race_2023_bahrain.json  race_2023_baku.json  race_2023_catalunya.json  race_2023_hungaroring.json  race_2023_interlagos.json  race_2023_jeddah.json  race_2023_losail.json  race_2023_marina_bay.json  race_2023_miami.json  race_2023_monaco.json  race_2023_monza.json  race_2023_red_bull_ring.json  race_2023_rodriguez.json  race_2023_silverstone.json  race_2023_spa.json  race_2023_suzuka.json  race_2023_vegas.json  race_2023_villeneuve.json  race_2023_yas_marina.json  race_2023_zandvoort.json  race_2024_albert_park.json  race_2024_americas.json  race_2024_bahrain.json  race_2024_baku.json  race_2024_catalunya.json  race_2024_hungaroring.json  race_2024_imola.json  race_2024_interlagos.json  race_2024_jeddah.json  race_2024_losail.json  race_2024_marina_bay.json  race_2024_miami.json  race_2024_monaco.json  race_2024_monza.json  race_2024_red_bull_ring.json  race_2024_rodriguez.json  race_2024_shanghai.json  (+9 more)
src/: data.rs  lib.rs  main.rs  models.rs  simulator.rs  utils.rs
src/simulator/: historical.rs  prediction.rs  simulation.rs
tests/: data_tests.rs  historical_tests.rs  simulation_tests.rs
