[package]
name = "f1-cli-simulator"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for simulating Formula 1 races and sessions"
authors = ["Kevin van Rossum"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"  # JSON support
reqwest = { version = "0.11", features = ["json", "blocking"] }  # HTTP client
chrono = "0.4"  # Date and time
rand = "0.8"  # Random number generation
rand_distr = "0.4"  # Probability distributions
csv = "1.2"  # CSV file handling
tabled = "0.14"  # Table formatting for output
indicatif = "0.17"  # Progress bars
colored = "2.0"  # Colored terminal output
anyhow = "1.0"  # Error handling

[dev-dependencies]
mockall = "0.13.1"
